amf-cli/shared/src/test/resources/parser-results/raml/error/overflow-number.raml
#%RAML 1.0
title: test big number
types:
  Root:
    properties:
      prop:
        format: int64
        maximum: 9223372036854776000
        minimum: 0
        type: number